cluster-components/kuberos/cloud-platform-live-0/kuberos.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuberos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: login.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuberos
          servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: kuberos
spec:
  ports:
  - port: 443
    name: http
    targetPort: http
  selector:
    app: kuberos
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuberos
spec:
  template:
    metadata:
      labels:
        app: kuberos
    spec:
      containers:
      - name: kuberos
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/cloud-platform/kuberos:1888d946522dd4770accd3f47ba4023b1d0b0f88
        command:
        - "/kuberos"
        - "$(OIDC_ISSUER_URL)"
        - "$(OIDC_CLIENT_ID)"
        - "/oidc/secret"
        - "/templates/kubecfg"

        ports:
        - containerPort: 10003
          name: http

        volumeMounts:
        - name: oidc
          mountPath: /oidc
        - name: templates
          mountPath: /templates

      volumes:
      - name: oidc
        secret:
          secretName: kuberos-oidc

      - name: templates
        configMap:
          name: templates
